# kde_controlcenter

./: CMakeLists.txt  README.md  controlcentre-v10-plasma6.plasmoid
applet/: metadata.json
applet/contents/config/: main.xml
applet/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  main.qml
applet/contents/ui/components/: BrightnessSlider.qml  ColorSchemeSwitcher.qml  ConnectionItem.qml  ConnectionListHeader.qml  DndButton.qml  ListItem.qml  MediaPlayer.qml  Network.qml  SectionButtons.qml  SectionNetworks.qml  Volume.qml
applet/contents/ui/config/: configAppearance.qml
applet/contents/ui/lib/: Card.qml  CardButton.qml  Icon.qml  LongButton.qml  Slider.qml
package/: CMakeLists.txt  metadata.json
package/contents/config/: main.xml
package/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  main.qml
package/contents/ui/components/: AppletIcon.qml  BrightnessSlider.qml  CommandRun.qml  ConnectionListHeader.qml  KDEConnect.qml  MediaPlayer.qml  Network.qml  RedShift.qml  SectionButtons.qml  SectionNetworks.qml
package/contents/ui/config/: configColorscheme.qml
package/contents/ui/lib/: Slider.qml
